<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE98E6DF"
    tools:context=".DetailActivity">

    <include
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar"/>

    <ImageView
        android:id="@+id/album_imageView"
        android:layout_width="304dp"
        android:layout_height="243dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="31dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_textView"
        app:layout_constraintVertical_bias="0.743"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/pause"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:onClick="mediaplayer"
        android:text="@string/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forward_button"
        app:layout_constraintStart_toEndOf="@+id/rewind_button" />

    <ImageButton
        android:id="@+id/forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/forward"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:text="@string/forward_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/rewind_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/rewind"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:text="@string/rewind_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/artist_textView"
        android:layout_width="117dp"
        android:layout_height="43dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/artist_name"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>