<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AE98E6DF"
    android:id="@+id/DetailActivity"
    tools:context="com.example.DetailActivity">

    <include
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/app_bar"/>

    <ImageView
        android:id="@+id/album_imageView"
        android:layout_width="304dp"
        android:layout_height="243dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="31dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="23dp"
        android:onClick="seekBarProgress"
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_imageView"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/stop"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:visibility="invisible"
        android:onClick="clickPlay"
        android:text="@string/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forward_button"
        app:layout_constraintStart_toEndOf="@+id/rewind_button"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/play"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:visibility="invisible"
        android:onClick="clickPlay"
        android:text="@string/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forward_button"
        app:layout_constraintStart_toEndOf="@+id/rewind_button"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/pause"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:onClick="clickPause"
        android:text="@string/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forward_button"
        app:layout_constraintStart_toEndOf="@+id/rewind_button"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/forward"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:onClick="Forward"
        android:text="@string/forward_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="MissingConstraints,OnClick" />

    <ImageButton
        android:id="@+id/rewind_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/rewind"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:text="@string/rewind_button"
        android:onClick="Rewind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/album_name"
        android:layout_width="130dp"
        android:layout_height="28dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/artist_name"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="6dp"
        android:text="@string/song_name"
        app:layout_constraintBottom_toTopOf="@+id/artist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_name" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="10dp"
        android:text="@string/artist_name"
        app:layout_constraintBottom_toTopOf="@+id/album_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_name" />
</androidx.constraintlayout.widget.ConstraintLayout>